<resources>
    <string name="app_name">Telekinesis</string>
    <string name="keep_running">Running…</string>
    <string name="keep_all">All</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Near Field Share</string>
    <string name="nav_header_subtitle">from ventsea@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_dm">Download</string>

    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="email">Email</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="declaration">Declaration</string>

    <string name="test_text">~</string>
    <string name="size_date">%1$s   %2$s</string>
    <string name="not_folder">No files</string>
    <string name="search_hint">Searchable</string>
    <string name="action_test">Test</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="positive">Positive</string>
    <string name="ask_down">Do you want to download？</string>
    <string name="ask_down_file">Download %1$s</string>
    <string name="click_refresh">Click Refresh</string>
    <string name="clazz">Category</string>
    <string name="storage_device">Storage Devices</string>
    <string name="internal_storage_device">Internal Storage</string>
    <string name="available_space">%1$s Free</string>
    <string name="preview">Preview</string>
    <string name="discover">Discovery</string>

    <string name="contact">Contacts</string>
    <string name="image">Pictures</string>
    <string name="video">Videos</string>
    <string name="audio">Audio</string>
    <string name="doc">Documents</string>
    <string name="app">Apps</string>
    <string name="clazz_count">(%1$d)</string>
    <string name="file_info">File Information</string>
    <string name="insert">Import</string>
    <string name="view">View</string>
    <string name="ok">OK</string>
    <string name="q_n_a"> <Data><![CDATA[<font color="#000000">·What is this?</font><br />This is a near field service application using WIFI-DIRECT technology.<br /><br /><font color="#000000">·What can be done?</font><br />1.Browse the storage files of another device at a close distance without affecting the current network status.<br />2.Support for transferring files.<br /><br /><font color="#000000">·Can\'t find hot spots?</font><br />1.Ensure that there are hot spots that have been activated around.<br />2.Try to refresh.<br /><br /><font color="#000000">·Unable to connect？</font><br />1.Check if proxy mode has been turned off.<br />2.One of the devices did not follow the WIFI-DIRECT protocol.<br /><br /><font color="#000000">·Slow network speed？</font><br />1.Try disconnecting the current WLAN (Not turning off the WLAN).<br />2.Restart hotspot.]]></Data></string>
    <string name="select_email">Choose</string>
    <string name="Tips">Tips</string>
    <string name="open_gps">Need to open the location service, open it?</string>
    <string name="open">Open</string>
    <string name="import_contacts">Importing contacts</string>
    <string name="Import_completed">Import completed</string>
    <string name="Import_failed">Import failed</string>
    <string name="no_support_class">Unsupported file type</string>
    <string name="delete">Delete</string>
    <string name="open_directory">Open Directory</string>
    <string name="continue_down">Continue</string>
    <string name="retry">Retry</string>
    <string name="pause">Pause</string>
    <string name="preparing">Preparing</string>
    <string name="waiting">Waiting</string>
    <string name="start_hotspot">Start Hotspot</string>
    <string name="find_hot">Discover</string>
    <string name="version">Version</string>
    <string name="osl">Open source licenses</string>
    <string name="osl_details">License details for open source software</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="warning_detail">After starting the hotspot, your device may be being viewed. In order to protect your privacy, please turn off the hotspot after use.</string>
    <string name="wlan_disable">WLAN is not available, please turn on WLAN</string>
    <string name="location_info">Location Information</string>
    <string name="write_call_log">Write Call Log</string>
    <string name="read_call_log">Read Call Log</string>
    <string name="write_contact">Write Contact</string>
    <string name="read_contact">Read Contact</string>
    <string name="read_sms">Read SMS</string>
    <string name="open_camera">Camera</string>
    <string name="device_information">Device Information</string>
    <string name="storage">Storage</string>
    <string name="nearby_wifi_device">Nearby Wi-Fi Device</string>
    <string name="need_permission">This feature requires you to grant the following permissions to work properly:</string>
    <string name="permission_warning">Warning: The above permissions are only used for the necessary functions, your device information will be discovered by other devices, if you do not want anyone to browse the device information, please cancel.</string>
    <string name="authorize">Authorize</string>
</resources>
